samples/_failures_safe/1761332262_60eac5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25871125.c: In function ‘main’:
./samples/SAFE/__tmp_25871125.c:149:5: error: expected declaration or statement at end of input
  149 |     if (compressed_size == 0) {
      |     ^~
./samples/SAFE/__tmp_25871125.c:149:5: error: expected declaration or statement at end of input
